Animation program now done!

--- a/Random Projects/computer/19/.gitignore
+++ b/Random Projects/computer/19/.gitignore
@@ -1,5 +1,8 @@
 .generatedCodeFiles
+animations
 apis
-desktop inputs
-laptop inputs
 cfg
+
+Animations/size_30x30/More than 100 MB
+Animations/size_227x85/More than 100 MB
+Animations/size_426x160/More than 100 MB
